#include(../old_compiler_flags.cmake)
add_subdirectory(open_viii)
target_include_directories(VIIITools INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(VIIICompression INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(VIIIStrings INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(VIIIPaths INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(VIIIArchive INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(VIIIKernel INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(VIIIMenuGroup INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(VIIIPak INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(VIIIGraphics INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(VIIIBattle INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(VIIIField INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})